tests/test0152.ctr
#NOAST
#Test parser error
var :=.

